option(
    'input-history-busname-root', type: 'string',
    value: 'org.open_power.powersupply',
    description: 'The D-Bus busname root for the PS input history.',
)
option(
    'input-history-sensor-root', type: 'string',
    value: '/org/open_power/sensors/aggregation/per_30s',
    description: 'The D-Bus power sensors namespace root.',
)
option(
    'tests', type: 'feature', description: 'Build tests.',
)

# Supported power sequencers are: ucd90160, mihawk-cpld
option(
    'power_sequencer', type: 'string', value: 'ucd90160',
    description: 'The power sequencer',
)

option(
    'device-access', type: 'boolean', value: true,
    description: 'Enable UCD90160 hardware access.',
)
option(
    'ucd90160-yaml', type: 'string', value: 'example/ucd90160.yaml',
    description: 'The sequencer definition file to use.',
)
option(
    'oe-sdk', type: 'feature', description: 'Enable OE SDK'
)
